# moodle-score-board

./: .gitignore  CMakeLists.txt  README.md  create_config_json.py  format.sh  make_orca.sh  mem_test.py
scripts/cmake/: CodeCoverage.cmake
sql/: create_tables.sql
src/: main.c
test/: test.c
